# B.L.I.T.Z

./: .coveragerc  .cursorrules  .dockerignore  .gitignore  .gitmodules  BLITZ-CONFIG.toml  Cargo.toml  Dockerfile  Dockerfile.flash.test  Dockerfile.test.install  Makefile  README.md  TODO.md  camera_identification.json  compose.yml  flash.sh  name_ideas.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test.py  tsconfig.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  pylint.yml
__tests__/: backend_deployment_tests.py  bootstrap_runtime_tests.py  deploy_script_tests.py  docker_test_utils.py  installation_tests.py  wpilib_installer_tests.py
april/: config.toml  requirements.txt
april/src/: config.py  main.py
autobahn/: README.md  autobahn.conf  config.toml  requirements.txt
autobahn/src/: main.py
backend/: deploy.py
backend/deployment/: bundler.py  compilation_util.py  deployer.py  pi_api.py  process_type_util.py  processes.py  util.py
backend/rust/pathfinding/: Cargo.toml
backend/rust/pathfinding/src/: astar.rs
cleaning/camera-feed-cleaner/: config.toml
common/: config.py  config_util.py  json_util.py  logger.py  profiler.py
common/camera/: transform.py
common/config_class/: april_detection.py  autobahn.py  camera_feed_cleaner.py  image_recognition.py  profiler.py
common/error/: missing_key_error.py
common/image/: image_util.py
common/msg/: april_tag.py  image.py  inference.py
common/proto/: AprilTag.proto  Image.proto  Inference.proto
communication/: README.md  requirements.txt
communication/src/: config.py  main.py
communication/test/: test.bash
config/: .gitignore  default  index.ts
config/config/: index.ts
config/lidar/: index.ts
config/pos_extrapolator/: index.ts
config/schema/: config.thrift  index.d.ts  index.ts
docker/: Dockerfile.clean  Dockerfile.dev.test  Dockerfile.unit.test
docs/: README.md  part-01-setup.md  part-02-codegen.md  part-03-run-local.md  part-04-deploy.md  part-05-autostart.md  part-06-testing-ci.md  part-07-troubleshooting.md
example/ai/: april_tag_det.py
example/gtsam/: gtsam_test.py
example/transformation/: transformation_10.py
example/util/: test_ip.py
examples/april_tag/: camera_rotation.py
examples/autobahn/: periodically_test_autobahn.py
examples/camera/: camera_capture.py
examples/lidar/: camera_lidar_frustum.py
helper/: .gitignore  sterio_camera_calib.py
helper/camera_calibration/: app_config.json  config.toml
helper/camera_color_calib/: getter.py  main.py
helper/tag_pos_calibration/: .gitignore  camera_config.json  capture_tags.py  main.py  util.py
misc/: name_ideas.md
ops/systemd/: watchdog.service
project/autobahn/: autobahn.conf
project/autobahn/autobahn-rust/: .gitignore  Cargo.toml  config.toml  config1.toml
project/autobahn/autobahn-rust/src/: config.rs  flags.rs  main.rs  writer.rs
project/common/: config.py  config_util.py  json_util.py  profiler.py
project/example/: april_tag_calib.py  april_tag_detection.ipynb  april_tag_detection.py  april_tag_only_positioning.py  april_tag_position_3d.py  april_tag_positioning.py  cam_expos.py  camera_frustum_test.py  camera_lidar_frustum_test.py  depth_map.ipynb  distance_judgement.ipynb  exponential_plot.py  image_detection_and_distance.ipynb  image_recognition.ipynb  kalman_filter_test.py  mock_path_extrapolator.py  ping.py  pong.py  position_and_more.py  recognize_obj_single_image.ipynb
project/hardware/navx2/: .gitignore  CMakeLists.txt
project/hardware/navx2/src/: autobahn.cpp  main.cpp
project/hybrid-frustum-pointnet/lidar/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  TODO.md  cmake_install.cmake  compose.yml  conan_build.sh  conanfile.txt  run.sh  sample.json
project/hybrid-frustum-pointnet/lidar/.devcontainer/: devcontainer.json
project/hybrid-frustum-pointnet/lidar/config/: config.toml
project/hybrid-frustum-pointnet/lidar/lidar-test/: CMakeLists.txt  Makefile  cmake_install.cmake  frustum-point-test.cpp  test-lidar-pt-cloud.cpp
project/hybrid-frustum-pointnet/lidar/src/: main.cpp
project/hybrid-frustum-pointnet/lidar/src/autobahn/: autobahn.h
project/hybrid-frustum-pointnet/lidar/src/util/: autobahn.cpp  autobahn.h  frustum.h  lidar_config.h  spherical_map.h  timed_point.h  vector3.h
project/hybrid-frustum-pointnet/lidar/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  util_tests.cpp
project/lidar/: Cargo.toml  build.rs  build.sh  readme.md  unitree_lidar_sdk_wrapper.h
project/lidar/rust/: Cargo.toml  build.rs
project/lidar/rust/examples/: detect_motion.rs  visualize_3d.rs  visualize_clusters.rs  visualize_voxel.rs
project/lidar/rust/proto/: lidar_message.proto
project/lidar/rust/src/: autobahn.rs  config.rs  device_info.rs  lidar.rs  main.rs  math.rs  point_util.rs
project/lidar/rust/src/lidar/: points_getter_2d.rs  points_getter_3d.rs  reader.rs
project/lidar_2d/: main.py
project/main_sequence/: README.md
project/rust/common/: Cargo.toml  build.rs
project/rust/common/src/: autobahn.rs  config.rs  lib.rs
project/rust/lidar_data_processing/: Cargo.toml
project/rust/lidar_data_processing/proto/: lidar.proto
project/test/: remove_fisheye.py
project/watchdog/: helper.py  main.py  monitor.py  process_starter.py
proto/: AprilTag.proto  Imu.proto  LidarMessage.proto  Odometry.proto  RobotPosition.proto  SetPosition.proto  Startup.proto  StateLogging.proto  position.proto  vector.proto
scripts/: deploy.py  discover_and_flash.py  flash.bash  generate-thrift.js  install.sh  install_deps.sh  setup.sh  startup.service  startup.sh  wipe.sh
src/config/: default  (+1 more)
std/: config.py  config_util.py  logger.py
system_data/: basic_system_config.json
test/: april_tag_recognition_no_fisheye.py  config.py  remove_fisheye.py  test_config.py
testing/: position_and_more.py
tests/: box_fov_conversion_test.py
watchdog/: __main__.py  constants.py  discovery.py  helper.py  main.py  monitor.py  process_starter.py
(+518 files in other folders)
