[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz"
version = "1.1.0"
description = "Battle-Linked Intelligent Tactical Pi Swarm"
readme = "README.md"
authors = [
    { name = "Pinewood Robotics" },
    { name = "Denis Koterov", email = "denis.koterov@gmail.com" },
]
requires-python = ">=3.8"

[project.scripts]
blitz-ai-server = "blitz.recognition.detection.image_recognition.src.main:main"
blitz-april-server = "blitz.recognition.position.april.src.main:main"
blitz-position-extrapolator = "blitz.pos_extrapolator.src.main:main"
blitz-watchdog = "blitz.watchdog.main:cli_main"
blitz = "blitz.terminal.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "watchdog*"]

[tool.pytest.ini_options]
testpaths = ["backend/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
