[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz"
version = "1.1.0"
description = "Battle-Linked Intelligent Tactical Pi Swarm"
readme = "README.md"
authors = [
    { name = "Pinewood Robotics" },
    { name = "Denis Koterov", email = "denis.koterov@gmail.com" },
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "watchdog*"]

[tool.pytest.ini_options]
testpaths = ["watchdog/", "backend/"]
