[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz"
version = "1.1.0"
description = "Battle-Linked Intelligent Tactical Pi Swarm"
readme = "README.md"
authors = [
    { name = "Pinewood Robotics" },
    { name = "Denis Koterov", email = "denis.koterov@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "protobuf>=7.34.1",
    "autobahn-client>=0.1.4",
    "zeroconf>=0.148.0",
    "asyncio>=4.0.0",
    "flask>=3.1.2",
    "colorama>=0.4.6",
    "psutil>=7.2.2",
    "pydantic>=2.13.3",
    "netifaces>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "watchdog*"]

[tool.pytest.ini_options]
testpaths = ["watchdog/", "backend/"]
