[package]
name = "pathfinding"
version = "0.1.0"
edition = "2021"

[dependencies]
common-core = { path = "../common" }
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
nalgebra = { version = "0.33.2", default-features = false, features = [
    "serde-serialize",
] }
autobahn-client = "0.1"
ctor = "0.1"
