[package]
name = "autobahn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.26.1"
tokio-tungstenite = "0.26.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.7"
toml = "0.8.19"
futures-util = "0.3.31"
rand = "0.8.5"
log = "0.4"
env_logger = "0.10"
bytes = "1.9.0"
