[package]
name = "lidar-rs"
version = "0.1.0"
edition = "2021"
links = "unitree_lidar_sdk"

[dependencies]
libc = "0.2"
cxx = "1.0"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rstar = "0.12.2"
dbscan = "0.3.1"
image = "0.24"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
prost = "0.12"
bytes = "1.5"
url = "2.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
cxx-build = "1.0"
prost-build = "0.12"

[[example]]
name = "dynamic_points"
path = "examples/dynamic_points.rs"

[[example]]
name = "visualize_3d"
path = "examples/visualize_3d.rs"

[[example]]
name = "visualize_voxel"
path = "examples/visualize_voxel.rs"

[[example]]
name = "detect_motion"
path = "examples/detect_motion.rs"

[[example]]
name = "visualize_clusters"
path = "examples/visualize_clusters.rs"
