[package]
name = "lidar-rs"
version = "0.1.0"
edition = "2021"
links = "unitree_lidar_sdk"

[dependencies]
libc = "0.2"
cxx = "1.0"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rstar = "0.12.2"
dbscan = "0.3.1"
image = "0.24"
clap = { version = "4.5", features = ["derive"] }

# Use workspace dependencies
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
prost.workspace = true
bytes.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
cxx-build = "1.0"
prost-build = "0.12"
