[package]
name = "lidar-processing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
common-core = { path = "../common" }
libc = "0.2.171"
cxx = "1.0.150"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rstar = "0.12.2"
dbscan = "0.3.1"
image = "0.24"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }

tokio-tungstenite.workspace = true
futures-util.workspace = true
prost.workspace = true
bytes.workspace = true
url.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build = "0.13.5"
walkdir = "2.4.0"
